[package]
name = "rsrl_codec"
version = "0.1.0"
authors = ["alanpoon <brightshadowx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive ="1.0"
cardgame_macros = {git="https://github.com/alanpoon/cardgame_macros.git"}
