[package]
name = "rsrl_lobby"
version = "0.1.0"
authors = ["alanpoon <brightshadowx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive ="1.0"
cardgame_macros = {git="https://github.com/alanpoon/cardgame_macros.git"}
websocket = { version ="0.24.0"}
tokio-core = "0.1.17"
futures ={ version = "0.1.14"}
rsrl = {path="../rsrl",features=["serialize"]}
slog = "2.5"
hardback_server = {path="../../hardback_server"}
scrabble = {path="../../scrabble-core"}